(feat) full category feature
