# internal/handlers/auth/login.go
@@ -15,17 +15,26 @@ import (
 func Login(c *fiber.Ctx) error {
 	req := new(authModel.User)
 	if err := c.BodyParser(req); err != nil {
-		return c.Status(fiber.StatusBadRequest).SendString("Invalid login")
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"status":  400,
+			"message": "Invalid request",
+		})
 	}
 
 	user := &authModel.User{}
 	err := mgm.Coll(user).First(bson.M{"email": req.Email}, user)
 	if err != nil {
-		return c.Status(fiber.StatusUnauthorized).SendString("Wrong email or password")
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"status":  401,
+			"message": "Unauthorized",
+		})
 	}
 
 	if compareErr := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(req.Password)); compareErr != nil {
-		return c.Status(fiber.StatusUnauthorized).SendString("Wrong email or password")
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"status":  401,
+			"message": "Unauthorized",
+		})
 	}
 
 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
@@ -35,8 +44,14 @@ func Login(c *fiber.Ctx) error {
 	})
 	t, err := token.SignedString(configs.JWTSecret)
 	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).SendString("Token generation failed")
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"status":  500,
+			"message": "Token generation failed",
+		})
 	}
 
-	return c.JSON(fiber.Map{"token": t})
+	return c.JSON(fiber.Map{
+		"status": 200,
+		"token":  t,
+	})
 }
